syntax = "proto3";
package services.item;
option go_package = "item-service.pb";

message IsItemExistsRequest {
   int32 ItemID=1;
}

message IsItemExistsResponse {
    bool Exists=1;
}

service ItemService {
    rpc IsItemExists (IsItemExistsRequest) returns (IsItemExistsResponse);
}